css/main.css
body {
    margin: 30px auto;
    width: 60%;
    color: #282828;
    background-color: #F2F2F2; 
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}
nav ul, footer ul {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    padding: 0px;
    list-style: none;
    font-weight: bold;
    font-variant: small-caps
}
nav ul li, footer ul li {
    display: inline;
    margin-right: 20px;
}
a {
    text-decoration: none;
    color: #2AD;
}
a:hover {
    text-decoration: underline;
}
h1 {
    font-size: 2em;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    margin-bottom: -0.5em;
}
h2 {
    margin-top: -0.5em;
    margin-bottom: -0.3em;
}

h3 {
    margin-top: 1.5em;
    margin-bottom: 0em;
    font-size: 1.7em;
}

p {
    font-size: 1.1em;
    line-height: 1.2em;
}
footer {
    border-top: 1px solid #d5d5d5;
    font-size: .8em;
}

ul.posts { 
    margin: 20px auto 40px; 
    font-size: 1.5em;
}

ul.posts li {
    list-style: none;
}

img.smallkitty {
    display: block;
    max-height: 150px;
    max-width: 100%;
    width: auto;
    height: auto;
    margin-right: auto;
    margin-left: auto;
    margin-top: 2em;
    margin-bottom: 2em;
}
img.kitty {
    display: block;
    max-height: 200px;
    max-width: 100%;
    width: auto;
    height: auto;
    margin-right: auto;
    margin-left: auto;
    margin-top: 2em;
    margin-bottom: 2em;
}

img.mediumkitty {
    display: block;
    max-height: 250px;
    max-width: 100%;
    width: auto;
    height: auto;
    margin-right: auto;
    margin-left: auto;
    margin-top: 2em;
    margin-bottom: 2em;
}

img.largekitty {
    display: block;
    max-height: 300px;
    max-width: 100%;
    width: auto;
    height: auto;
    margin-right: auto;
    margin-left: auto;
    margin-top: 2em;
    margin-bottom: 2em;
}

img.largestkitty {
    display: block;
    max-width: 100%;
    width: auto;
    height: auto;
    margin-right: auto;
    margin-left: auto;
    margin-top: 2em;
    margin-bottom: 2em;
} 

.date {
    font-style: italic;
    color: #999;
    font-size: 1em
}

